After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776984 - eog displays jpeg image color incorrectly on wayland
eog displays jpeg image color incorrectly on wayland
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: image viewer
3.20.x
Other Linux
: Normal minor
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-07 15:12 UTC by Felix Riemann
Modified: 2017-01-08 14:13 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Felix Riemann 2017-01-07 15:12:02 UTC
Running on wayland the sRGB fallback introduced by bug 563760 doesn't apply.

+++ This bug was initially created as a clone of Bug #776888 +++

Opening jpeg images with and embedded Adobe RGB profile when using wayland using eog shows incorrect colors.  When opening the same image on xorg the correct colors are shown.  
In addition, setting the image as the desktop background image results in incorrect colors regardless of xorg or wayland being used.
Comment 1 Felix Riemann 2017-01-07 16:16:05 UTC
commit e557e8b6a40bf20ad0d9b868267817e3b3f25d7d
Author: Felix Riemann <>
Date:   Fri Jan 6 21:14:18 2017 +0100

    EogWindow: Fix sRGB display profile fallback on Wayland
    
    https://bugzilla.gnome.org/show_bug.cgi?id=776984
---
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.