EogWindow: Fix sRGB display profile fallback on Wayland

https://bugzilla.gnome.org/show_bug.cgi?id=776984